--- a/GraduationSelectionSystemNew/Web.config
+++ b/GraduationSelectionSystemNew/Web.config
@@ -10,5 +10,17 @@
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
-
-</configuration>
+    <appSettings>
+      <add key="connstring" value="uid=sa;password=p@ssw0rd;database=GraduteChooseSystem;server=(local)" />
+    </appSettings> 
+    <!--<customErrors defaultRedirect="ErrorPage.aspx" mode="RemoteOnly"></customErrors> 
+    <sessionState mode="InProc" cookieless="true" timeout="20"></sessionState>--> 
+    <!--<authentication mode="Forms"><forms loginUrl="logon.aspx" name=".FormsAuthCookie" /></authentication>-->    
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
